# tissue-specific-promoters

./: .gitignore  .gitmodules  HANDOFF.md  NOTES.md  README.md  pyproject.toml
data/hyenadna_model/: README.md  config.json  modeling_hyena.py
results/dual_on_hek293_20260203_215622/: summary.json
review/: ralph_review.sh  sandbox_review.sh  tracking.yaml
review/prompts/: scripts.md
scripts/: analyze_top_sequences.py  evaluate_ensemble.py  prepare_data.py  run_dual_on.py  run_dual_on_hek293_modal.py  run_dual_on_modal.py  score_known_promoters.py  train_jurkat_ensemble.py  train_oracles.py  train_oracles_modal.py
src/: parm_oracle.py
