[project]
name = "tissue-specific-promoters"
version = "0.1.0"
description = "Tissue and cell-type specific promoter design"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "scikit-learn",
    "biopython",
    "jupyter",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
